--- a/index.html
+++ b/index.html
@@ -1,62 +1,212 @@
 <!doctype html>
 <html lang="en">
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Your Name</title>
-<link rel="stylesheet" href="https://unpkg.com/mvp.css"> <!-- tiny, clean default styles -->
-<header>
-  <h1>Your Name</h1>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="cv.pdf">CV</a>
-    <a href="#contact">Contact</a>
-    <a href="https://github.com/yourname">GitHub</a>
-    <a href="https://www.linkedin.com/in/yourname">LinkedIn</a>
-  </nav>
-</header>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Your Name — Research Portfolio</title>
+  <meta name="description" content="Research and projects portfolio" />
+  <style>
+    :root{
+      --bg: #ffffff; --fg:#111827; --muted:#6b7280; --card:#fafafa; --accent:#2563eb; --ring:#93c5fd; --line:#e5e7eb;
+      --max: 1050px; --radius: 16px;
+    }
+    @media (prefers-color-scheme: dark){
+      :root{ --bg:#0b0e14; --fg:#e5e7eb; --muted:#9ca3af; --card:#111522; --accent:#60a5fa; --ring:#1d4ed8; --line:#22293a; }
+    }
+    html{scroll-behavior:smooth}
+    body{margin:0; font: 16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji"; background:var(--bg); color:var(--fg);} 
+    .container{max-width:var(--max); margin:auto; padding: 24px 20px 96px;}
+    header{position:sticky; top:0; backdrop-filter:saturate(180%) blur(10px); background:color-mix(in oklab, var(--bg) 85%, transparent); border-bottom:1px solid var(--line);}
+    header .inner{max-width:var(--max); margin:auto; display:flex; align-items:center; justify-content:space-between; gap:16px; padding:12px 20px;}
+    .brand{display:flex; align-items:center; gap:12px; font-weight:700; letter-spacing:.2px;}
+    nav a{color:var(--fg); text-decoration:none; padding:8px 10px; border-radius:10px;}
+    nav a:hover, nav a:focus{ outline:none; background:var(--card);} 
+    .hero{padding: 28px 0 10px;}
+    .hero h1{margin:0 0 6px; font-size: clamp(28px, 4.2vw, 40px);}
+    .hero p{margin:0; color:var(--muted)}
+    .section{margin: 28px 0 8px; display:flex; align-items:baseline; justify-content:space-between; gap:16px;}
+    .section h2{font-size: 18px; text-transform:uppercase; letter-spacing: .16em; margin:0; color:var(--muted)}
+    .cards{display:grid; grid-template-columns: repeat(auto-fit, minmax(290px, 1fr)); gap:18px;}
+    .card{background:var(--card); border:1px solid var(--line); border-radius:var(--radius); padding:18px; display:flex; flex-direction:column; gap:10px;}
+    .card h3{margin:.2rem 0; font-size: 20px;}
+    .meta{font-size:14px; color:var(--muted)}
+    .keywords{display:flex; flex-wrap:wrap; gap:8px;}
+    .tag{font-size:12px; padding:.2rem .5rem; border:1px solid var(--line); border-radius:999px; color:var(--muted);}
+    .lead{margin:.2rem 0 .4rem;}
+    .features{margin:.2rem 0 .4rem; padding-left: 1.2rem;}
+    .features li{margin:.2rem 0;}
+    .features li::marker{content:"★  "; color:var(--accent);}  
+    .skills{font-size: 13px; color:var(--muted)}
+    .actions{display:flex; flex-wrap:wrap; gap:10px; margin-top:6px;}
+    .btn{display:inline-flex; align-items:center; gap:8px; padding:.5rem .75rem; border-radius:10px; text-decoration:none; font-weight:600; border:1px solid var(--line);}
+    .btn.primary{background:var(--accent); border-color:transparent; color:white;}
+    .btn:hover{box-shadow:0 0 0 3px color-mix(in oklab, var(--ring) 40%, transparent)}
+    .thumb{aspect-ratio: 16/9; width:100%; object-fit:cover; border-radius:12px; border:1px solid var(--line); background:#0001}
 
-<main id="home">
-  <p>Short intro (1–2 lines). Research interests: HCI/XR, vision-for-XR, visualization.</p>
+    .grid-two{display:grid; grid-template-columns: 1.2fr .8fr; gap:18px;}
+    @media (max-width:900px){ .grid-two{grid-template-columns: 1fr;}}
 
-  <h5>RESEARCH</h5>
-  <section>
-    <article>
-      <h3>Project Title</h3>
-      <p>1–2 sentence abstract. <strong>Features:</strong></p>
-      <ul>
-        <li>Specific technical contribution or method.</li>
-        <li>Key result or evaluation (numbers are great).</li>
-        <li>What you built (code, dataset, prototype).</li>
-      </ul>
-      <p>
-        <a href="paper.pdf">View Paper</a> ·
-        <a href="demo.html">Demo</a> ·
-        <a href="https://github.com/yourname/repo">Code</a>
-      </p>
-      <img src="img/proj1.jpg" alt="screenshot of project 1">
-    </article>
+    footer{margin-top:48px; border-top:1px solid var(--line);}
+    footer .inner{max-width:var(--max); margin:auto; padding:18px 20px 48px; display:grid; gap:6px;}
+    .muted{color:var(--muted)}
 
-    <!-- Duplicate <article> blocks per research item -->
-  </section>
+    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+    .note{background:var(--card); border:1px dashed var(--line); border-radius:12px; padding:12px; color:var(--muted);}
+  </style>
+</head>
+<body>
+  <a class="sr-only" href="#main">Skip to content</a>
+  <header>
+    <div class="inner">
+      <div class="brand">Your Name</div>
+      <nav aria-label="Primary">
+        <a href="#research">Research</a>
+        <a href="#projects">Selected Projects</a>
+        <a href="cv.pdf">CV</a>
+        <a href="#contact">Contact</a>
+        <a href="https://github.com/yourname" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://www.linkedin.com/in/yourname" target="_blank" rel="noopener">LinkedIn</a>
+      </nav>
+    </div>
+  </header>
 
-  <h5>SELECTED PROJECTS</h5>
-  <section class="grid">
-    <article>
-      <h3>Project A</h3>
-      <p>One-liner + skills/tech stack.</p>
-      <a href="https://github.com/yourname/repoA">GitHub Repo</a>
-    </article>
-    <article>
-      <h3>Project B</h3>
-      <p>One-liner + skills/tech stack.</p>
-      <a href="https://github.com/yourname/repoB">GitHub Repo</a>
-    </article>
-  </section>
-</main>
+  <div id="main" class="container">
+    <section class="hero">
+      <h1>Your Name</h1>
+      <p>Research Interests: HCI & XR · Vision-for-XR · Visualization (edit this one-liner)</p>
+    </section>
 
-<footer id="contact">
-  <h3>Contact</h3>
-  <p><strong>Email:</strong> you@school.edu · <strong>Phone:</strong> (xxx) xxx-xxxx</p>
-  <p>© Your Name</p>
-</footer>
+    <!-- RESEARCH -->
+    <div class="section" id="research">
+      <h2>RESEARCH</h2>
+      <div class="note">Duplicate a <strong>card</strong> below for each research project. Replace placeholders in ALL-CAPS. Remove this note when done.</div>
+    </div>
+
+    <div class="cards">
+      <article class="card">
+        <h3>TITLE OF YOUR RESEARCH PROJECT</h3>
+        <div class="meta">Keywords:
+          <span class="keywords">
+            <span class="tag">keyword-1</span>
+            <span class="tag">keyword-2</span>
+            <span class="tag">keyword-3</span>
+          </span>
+        </div>
+        <p class="lead">1–3 sentence abstract: WHAT problem did you tackle, WHY it matters, HOW you approached it, and your headline result. Keep it crisp.
+        </p>
+        <ul class="features">
+          <li>Feature/Contribution 1 (e.g., "Designed a beam search variant with visitation metric; reproduced all known optima up to n=100.")</li>
+          <li>Feature/Contribution 2 (e.g., "Explored Moser lattice constructions with rotation/translation/reflection rules.")</li>
+          <li>Feature/Contribution 3 (e.g., "Parallel CPU/GPU implementations for 12× speedup over baseline.")</li>
+        </ul>
+        <p class="skills"><strong>Skills:</strong> Python · NumPy · PyTorch · C++ · CUDA · Unity/Unreal · Statistics (edit to match)</p>
+        <img class="thumb" src="img/placeholder-1.jpg" alt="Screenshot or figure for project (optional)">
+        <div class="actions">
+          <a class="btn primary" href="#">View Paper</a>
+          <a class="btn" href="#">Code</a>
+          <a class="btn" href="#">Demo</a>
+          <a class="btn" href="#">Dataset</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <h3>SECOND RESEARCH PROJECT TITLE</h3>
+        <div class="meta">Subjects:
+          <span class="keywords">
+            <span class="tag">subject-1</span>
+            <span class="tag">subject-2</span>
+          </span>
+        </div>
+        <p class="lead">Short abstract describing your theoretical/empirical focus (e.g., eigenmaps vs. orthogonal polynomials; list spaces S², [−1,1]², etc.).</p>
+        <ul class="features">
+          <li>What you analyzed/built (e.g., Laplacian operators on intervals/surfaces; sampling distributions).</li>
+          <li>Visualization tooling or evaluations (NumPy/Matplotlib; perceptual/metric analyses).</li>
+          <li>Key takeaway/insight or comparison (e.g., links to families of orthogonal polynomials).</li>
+        </ul>
+        <p class="skills"><strong>Skills:</strong> Python · MATLAB · NumPy · Matplotlib</p>
+        <div class="actions">
+          <a class="btn" href="#">View Paper</a>
+          <a class="btn" href="#">Demo / Plots</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <h3>THIRD RESEARCH PROJECT TITLE</h3>
+        <div class="meta">Venue: <em>HRI ’24</em> (or other) · <span class="keywords"><span class="tag">keywords</span><span class="tag">more</span></span></div>
+        <p class="lead">1–2 sentence study summary (e.g., non‑linguistic utterances for robot emotion; end‑user evaluation across arousal/valence).</p>
+        <ul class="features">
+          <li>Implemented system/prototype (robot, device, software) and core algorithm.</li>
+          <li>Designed motions/protocol; ran user study (N, task, metrics).</li>
+          <li>Key result (e.g., emotions X/Y/Z significantly separable; limitations noted).</li>
+        </ul>
+        <p class="skills"><strong>Skills:</strong> Python · C++ · Stats/ANOVA · Signal processing · Visualization</p>
+        <div class="actions">
+          <a class="btn primary" href="#">View Paper</a>
+          <a class="btn" href="#">View Demo</a>
+        </div>
+      </article>
+    </div>
+
+    <!-- SELECTED PROJECTS -->
+    <div class="section" id="projects">
+      <h2>SELECTED PROJECTS</h2>
+      <div class="note">Use cards below for non‑research or course projects. Keep one‑paragraph summaries + a single clear link.</div>
+    </div>
+
+    <div class="cards">
+      <article class="card">
+        <h3>PROJECT TITLE</h3>
+        <div class="meta">Optional subtitle (e.g., Optimized Disneyland Travel Map)</div>
+        <p class="lead">One‑paragraph summary describing the goal, core method (e.g., integer programming / TSP‑inspired), and outcome (e.g., reduced walking time by 22%).</p>
+        <div class="actions"><a class="btn" href="#">GitHub Repo</a></div>
+      </article>
+
+      <article class="card">
+        <h3>PROJECT TITLE</h3>
+        <p class="lead">Short description (e.g., hyperbolic‑plane visualizations using Poincaré disk; geodesics/tilings with Hyperbolic Canvas).</p>
+        <div class="actions"><a class="btn" href="#">GitHub Repo</a></div>
+      </article>
+
+      <article class="card">
+        <h3>PROJECT TITLE</h3>
+        <p class="lead">Short description (e.g., integer factorization algorithms; runtime comparisons of Fermat, Kraitchik‑Fermat, Pollard p−1).</p>
+        <div class="actions"><a class="btn" href="#">GitHub Repo</a></div>
+      </article>
+    </div>
+
+    <!-- CONTACT -->
+    <div class="section" id="contact">
+      <h2>CONTACT</h2>
+    </div>
+    <div class="grid-two">
+      <div class="card">
+        <h3>Get in touch</h3>
+        <p class="lead"><strong>Phone:</strong> (XXX) XXX‑XXXX<br>
+        <strong>Email:</strong> you@school.edu</p>
+        <p class="muted">Add social links in the header (GitHub/LinkedIn). You can add more here if you like.</p>
+      </div>
+      <div class="card">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="cv.pdf">CV (PDF)</a></li>
+          <li><a href="#research">Top of Research</a></li>
+          <li><a href="#">Google Scholar</a> (optional)</li>
+          <li><a href="#">Portfolio</a> (optional)</li>
+        </ul>
+      </div>
+    </div>
+
+    <footer>
+      <div class="inner">
+        <div>© <span id="y"></span> Your Name</div>
+        <div class="muted">Built with a single HTML file. Host on GitHub Pages.</div>
+      </div>
+    </footer>
+  </div>
+
+  <script>
+    // Update year automatically
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
+</body>
 </html>
